deploy/ingress_public.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: genetics-results-browser
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: "frontend-config"
    networking.gke.io/v1beta1.FrontendConfig: "frontend-config"
    kubernetes.io/ingress.global-static-ip-name: anno-public-ip
    networking.gke.io/managed-certificates: certificate-annopublic-finngen-fi
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/tls-acme: "true"
  labels:
    app: genetics-results-browser
spec:
  rules:
  - host: annopublic.finngen.fi
    http:
      paths:
      - backend:
          service:
            name: genetics-results-browser
            port:
              number: 80
        pathType: Prefix
        path: /
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/backend-config: '{"default": "http-hc-config"}'
  name: genetics-results-browser
  labels:
    app: genetics-results-browser
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: genetics-results-browser
    tier: web
